--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           "action": {
             "type": "launch_miniapp",
             "url": "https://donuettes.vercel.app",
-            "name": "Start Mining ⛏️",
+            "name": "Donuette⛏️",
             "splashImageUrl": "https://donuettes.vercel.app/splash.jpg",
             "splashBackgroundColor": "#fbc8d1"
           }
